--- a/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
+++ b/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
@@ -23,8 +23,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewLista"
         android:layout_width="412dp"
-        android:layout_height="571dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="682dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewLista"
         tools:layout_editor_absoluteX="-1dp" />
 
@@ -44,29 +44,29 @@
         app:srcCompat="@drawable/ic_baseline_add_24"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
+    <ImageView
+        android:id="@+id/imgNoHay"
+        android:layout_width="31dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="188dp"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerViewLista"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/recyclerViewLista"
+        app:layout_constraintTop_toTopOf="@+id/recyclerViewLista"
+        app:srcCompat="@drawable/ic_baseline_info_24" />
+
     <TextView
         android:id="@+id/txtNoHay"
         android:layout_width="310dp"
         android:layout_height="37dp"
-        android:layout_marginTop="272dp"
         android:text="No hay actividades de campo registradas"
         android:textColor="#757575"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.524"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recyclerViewLista"
-        app:layout_constraintVertical_bias="0.2" />
-
-    <ImageView
-        android:id="@+id/imgNoHay"
-        android:layout_width="31dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="300dp"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerViewLista"
-        app:layout_constraintStart_toStartOf="@+id/recyclerViewLista"
-        app:layout_constraintTop_toTopOf="@+id/recyclerViewLista"
-        app:srcCompat="@drawable/ic_baseline_info_24" />
+        app:layout_constraintTop_toBottomOf="@+id/imgNoHay"
+        app:layout_constraintVertical_bias="0.054" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
