--- a/app/src/main/res/layout/activity_mostra_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_mostra_actividad_de_campo.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentacion.MostraActividadDeCampo">
@@ -14,8 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:text="@string/txtViewEstacionDeMuestreo"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -26,6 +27,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="@string/txtViewFecha"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,8 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:text="@string/txtViewResumen"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblFecha" />
 
@@ -46,6 +49,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
         android:text="@string/txtViewMetodoDeMuestreo"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblEstacion" />
 
@@ -56,6 +60,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
         android:text="@string/txtViewUbicacion"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -66,6 +71,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
         android:text="@string/txtViewZona"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -76,6 +82,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
         android:text="@string/txtViewRegion"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -86,6 +93,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
         android:text="@string/txtViewDepartamento"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -96,6 +104,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
         android:text="@string/txtViewLocalidad"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -106,6 +115,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
         android:text="@string/txtViewFormulario"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -114,12 +124,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="160dp" />
+        app:layout_constraintGuide_begin="171dp" />
 
     <TextView
         android:id="@+id/txtFecha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="205dp"
+        android:layout_height="19dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -128,8 +138,8 @@
 
     <TextView
         android:id="@+id/txtResumen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="205dp"
+        android:layout_height="36dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -139,9 +149,9 @@
 
     <TextView
         android:id="@+id/txtEstacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_width="207dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="32dp"
         android:ems="10"
         android:inputType="textPersonName"
 
@@ -150,8 +160,8 @@
 
     <TextView
         android:id="@+id/txtMetodo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="204dp"
+        android:layout_height="26dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -161,8 +171,8 @@
 
     <TextView
         android:id="@+id/txtUbicacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="206dp"
+        android:layout_height="25dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -172,8 +182,8 @@
 
     <TextView
         android:id="@+id/txtZona"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="203dp"
+        android:layout_height="24dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -183,8 +193,8 @@
 
     <TextView
         android:id="@+id/txtRegion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="203dp"
+        android:layout_height="25dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -194,8 +204,8 @@
 
     <TextView
         android:id="@+id/txtDepartamento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="202dp"
+        android:layout_height="23dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -205,8 +215,8 @@
 
     <TextView
         android:id="@+id/txtLocalidad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="201dp"
+        android:layout_height="25dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -216,8 +226,8 @@
 
     <TextView
         android:id="@+id/txtFormulario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="203dp"
+        android:layout_height="26dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -229,15 +239,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="44dp"
         android:text="@string/txtViewEquipamiento"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/txtEquipamiento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="204dp"
+        android:layout_height="27dp"
         android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="textPersonName"
