--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -125,7 +125,7 @@
         android:layout_width="369dp"
         android:layout_height="52dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="188dp"
         android:ems="10"
         android:hint="Tipo de muestreo"
         android:inputType="textPersonName"
@@ -140,6 +140,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
         android:text="Seleccionar fecha...        *"
+        android:textColor="#4CAF50"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewLista2" />
@@ -200,6 +201,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Seleccionar hora...        *"
+        android:textColor="#4CAF50"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/txtViewFecha"
         app:layout_constraintStart_toEndOf="@+id/txtViewFecha" />
