--- a/app/src/main/res/layout/activity_mostra_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_mostra_actividad_de_campo.xml
@@ -10,6 +10,27 @@
     tools:context=".presentacion.MostraActividadDeCampo">
 
     <TextView
+        android:id="@+id/txtVerImagen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="124dp"
+        android:text="Ver imagen"
+        android:textColor="#4CAF50"
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtImagen"
+        app:layout_constraintStart_toEndOf="@+id/txtImagen" />
+
+    <TextView
+        android:id="@+id/txtImagen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
+        android:text="Imagen"
+        android:textColor="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
         android:id="@+id/lblEstacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -113,11 +134,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:text="@string/txtViewFormulario"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/txtImagen" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
