--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -72,12 +72,12 @@
 
     <EditText
         android:id="@+id/txtEquipamiento"
-        android:layout_width="368dp"
-        android:layout_height="53dp"
+        android:layout_width="369dp"
+        android:layout_height="49dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Equipamiento"
+        android:hint="Equipamiento                                                                   *"
         android:inputType="textPersonName"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Metodo de muestreo"
+        android:hint="Metodo de muestreo  *"
         android:inputType="textPersonName"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/txtEstacion"
@@ -127,7 +127,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="188dp"
         android:ems="10"
-        android:hint="Tipo de muestreo"
+        android:hint="Tipo de muestreo                                                           *"
         android:inputType="textPersonName"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
